tdf#112817 editeng,svx: fix SvxUnderlineItem/SvxOverlineItem SDI

This was asserting because the superclass SvxTextLineItem
was instantiated instead of the specific subclasses.

Change-Id: If26847b8fa96dbf00062ba8372fe58e58c786782