include/editeng/udlnitem.hxx
@@ -85,6 +85,8 @@ public:
 class EDITENG_DLLPUBLIC SvxUnderlineItem : public SvxTextLineItem
 {
 public:
+    static SfxPoolItem* CreateDefault();
+
     SvxUnderlineItem( const FontLineStyle eSt,
                       const sal_uInt16 nId );
 
@@ -100,6 +102,8 @@ public:
 class EDITENG_DLLPUBLIC SvxOverlineItem : public SvxTextLineItem
 {
 public:
+    static SfxPoolItem* CreateDefault();
+
     SvxOverlineItem( const FontLineStyle eSt,
                      const sal_uInt16 nId );
 
